# ros2-voice-assistant

./: .gitignore
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: ImageDescription.msg  VisualQuery.msg
install/: local_setup.sh  setup.sh
install/voice_assistant_pkg/lib/voice_assistant_pkg/: agent_node  input_node  output_node
install/voice_assistant_pkg/share/voice_assistant_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/voice_assistant_pkg/: package.xml  setup.cfg  setup.py
src/voice_assistant_pkg/launch/: voice_assistant_launch.py
src/voice_assistant_pkg/voice_assistant_pkg/: .env  agent_node.py  blip_client.py  blip_node.py  blip_server.py  git_model.py  input_node.py  llava_server.py  msg_types.py  output_node.py  scene_service.py  test_yolo_camera.py  yolo_server.py
src/voice_assistant_pkg/voice_assistant_pkg/tools/: __init__.py  blip_tool.py  llava_tool.py  qdrant_retriever.py  qdrant_tool.py  tavily_tool.py
